--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+beautifulsoup4==4.8.1
 certifi==2019.11.28
 cffi==1.13.2
 cryptography==2.8
@@ -6,4 +7,5 @@ pycparser==2.19
 PySocks==1.7.1
 python-telegram-bot==12.2.0
 six==1.13.0
+soupsieve==1.9.5
 tornado==6.0.3
