--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ ikelos
 xur_place.png
 ds2_bot.db
 save_Xur.py
+img_first_weapon.png
+img_fourth_weapon.png
+img_second_weapon.png
+img_third_weapon.png
