--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,6 @@ env
 ikelos
 *.odt
 /downloads
-xur_place.png
 ds2_bot.db
 save_Xur.py
-img_first_weapon.png
-img_fourth_weapon.png
-img_second_weapon.png
-img_third_weapon.png
+/xur_img
