--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ PySocks==1.7.1
 python-telegram-bot==12.2.0
 requests==2.22.0
 requests-toolbelt==0.9.1
+schedule==0.6.0
 six==1.13.0
 soupsieve==1.9.5
 tornado==6.0.3
